# mana

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  UMBRELLA.md  mana_rebuild_plan.md  mana_rebuild_strategy.md  vision.md
.mana/: .gitignore  245.1.2-design-human-close-policy-beyond-the-current-featu.md  245.1.2.2-define-candidate-human-close-policy-inputs-beyond.md  245.1.2.3-plan-migration-from-feature-based-human-close-to-p.md  245.1.2.4-specify-explicit-review-state-as-the-primary-drive.md  245.1.2.5-define-explicit-human-close-trigger-model-separate.md  247.1-specify-file-native-durable-memory-object-model.md  247.1.1-specify-markdown-as-view-boundary-for-mana-durable.md  247.1.2-evaluate-mana-storage-backend-evolution-beyond-mar.md  247.1.2.1-compare-sqlite-jsonl-object-files-and-current-md-f.md  247.1.2.2-define-markdown-mirror-and-bidirectional-sync-poli.md  247.1.2.3-define-multi-user-and-concurrency-model-for-future.md  247.1.2.4-evaluate-mana-numbering-and-canonical-identity-evo.md  247.1.2.7-implement-sqlite-derived-index-for-mana-agent-cont.md  247.1.2.7.1-add-sqlite-derived-index-schema-and-freshness-meta.md  247.1.2.7.2-implement-sqlite-full-rebuild-from-canonical-mana.md  247.1.2.7.3-update-sqlite-index-after-mana-canonical-writes.md  247.1.2.7.4-use-sqlite-derived-index-for-mana-agent-context-as.md  247.1.2.7.5-add-mana-doctor-and-index-rebuild-surfaces-for-sql.md  247.2-specify-retrieval-compaction-and-conflict-policy-f.md  247.3-map-migration-from-current-unit-centric-mana-memor.md  247.3.2-sequence-introduction-of-first-class-durable-memor.md  247.3.3-plan-retrieval-cutover-from-unitfact-context-assem.md  247.3.5-choose-the-first-proving-slice-for-object-native-m.md  247.3.6-capture-migration-risks-and-containment-strategies.md  247.3.8-plan-migration-from-unresolved-decision-gating-to.md  (+59 more)
crates/mana-cli/: Cargo.toml
crates/mana-cli/src/: cli.rs  lib.rs  main.rs  spawner.rs  stream.rs
crates/mana-cli/src/commands/: brief.rs  claim.rs  config_cmd.rs  context.rs  doctor.rs  fact.rs  groom.rs  interactive.rs  list.rs  logs.rs  mod.rs  next.rs  onboard.rs  quick.rs  search.rs  show.rs  stats.rs  status.rs  tidy.rs  trace.rs
crates/mana-cli/src/commands/close/: failure.rs  mod.rs  tests_close.rs
crates/mana-cli/src/commands/create/: mod.rs  tests.rs
crates/mana-cli/src/commands/run/: mod.rs  plan.rs  ready_queue.rs  wave.rs
crates/mana-cli/src/mcp/: resources.rs  tools.rs
crates/mana-cli/tests/: cli_tests.rs  mcp_test.rs
crates/mana-core/: Cargo.toml
crates/mana-core/src/: agent_presets.rs  blocking.rs  config.rs  discovery.rs  handle.rs  index.rs  lib.rs  prompt.rs  resolve.rs  util.rs  worktree.rs  yaml.rs
crates/mana-core/src/api/: mod.rs
crates/mana-core/src/ops/: adopt.rs  batch_verify.rs  claim.rs  close.rs  context.rs  create.rs  delete.rs  dep.rs  fact.rs  fact_sheet.rs  memory_context.rs  mod.rs  reopen.rs  reparent.rs  run.rs  show.rs  stats.rs  status.rs  update.rs  verify.rs
crates/mana-core/src/sqlite/: freshness.rs  mod.rs  query.rs  rebuild.rs  schema.rs
crates/mana-core/src/unit/: mod.rs  types.rs
crates/mana-core/tests/: api_integration.rs
crates/mana-pool/: Cargo.toml
crates/mana-pool/src/: dispatch.rs  lib.rs  types.rs
docs/: BEST_PRACTICES.md  SKILL.md
(+27 files in other folders)
