[workspace]
resolver = "2"
members = [
    "crates/mana-core",
    "crates/mana-cli",
    "crates/mana-review",
    "crates/mana-pool",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/kfcafe/mana"

[workspace.dependencies]
project-detect = "0.1.1"
