[package]
name = "mana-core"
version = "0.3.2"
edition = "2021"
rust-version = "1.85"
description = "Core library for mana — task tracker for AI coding agents"
license = "Apache-2.0"
repository = "https://github.com/kfcafe/mana"
homepage = "https://github.com/kfcafe/mana"
readme = "../../README.md"
keywords = ["task-tracker", "ai-agents", "orchestration", "coordination"]
categories = ["development-tools"]

[lib]
name = "mana_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4.20", features = ["serde"] }
dirs = "6"
fs2 = "0.4"
glob = "0.3"
libc = "0.2"
regex = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
shell-escape = "0.1"
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
